Fixed issue - ERD icons don't appear on firefox

--- a/client/assets/stylesheets/ui/components/_flowchart.scss
+++ b/client/assets/stylesheets/ui/components/_flowchart.scss
@@ -172,14 +172,10 @@ svg.draggable-container {
 }
 
 .add-field-icon {
-  width: 24px;
-  height: 24px;
   cursor: pointer;
 }
 
 .edit-object-icon {
-  width: 17px;
-  height: 17px;
   cursor: pointer;
 }
 
@@ -204,15 +200,6 @@ svg.draggable-container {
   visibility: hidden;
 }
 
-.edit-field-icon {
-  width: 15px;
-  height: 15px;
-}
-
-.up-down-icon {
-  width: 7px;
-  height: 4px;
-}
 
 .field-seperator {
   fill: #e1e1e1;
